syntax = "proto3";

package auth;

service AuthService {
  rpc LoginUser (LoginUserRequest) returns (AuthResponse) {}
  rpc RegisterUser (RegisterUserRequest) returns (AuthResponse) {}
  rpc VerifyUser (VerifyUserRequest) returns (AuthResponse) {}
  rpc RecoverUser (RecoverUserRequest) returns (AuthResponse) {}
  rpc Authenticate (AuthRequest) returns (AuthResponse) {}
  rpc RefreshToken (RefreshTokenRequest) returns (TokensResponse) {}
  rpc RevokeToken (RevokeTokenRequest) returns (RevokeTokenResponse) {}
}

message LoginUserRequest {
  string pin = 1;
  optional string phone = 2;
  optional string npub = 3;
}

message RegisterUserRequest {
  string pin = 1;
  optional string phone = 2;
  optional string npub = 3;
  repeated Role roles = 4;
}

message VerifyUserRequest {
  optional string phone = 1;
  optional string npub = 2;
  optional string otp = 3;
}

message RecoverUserRequest {
  string pin = 1;
  optional string phone = 2;
  optional string npub = 3;
  optional string otp = 4;
}

message AuthRequest {
  string accessToken = 1;
}

message AuthResponse {
  User user = 1;
  optional string accessToken = 2;
  optional string refreshToken = 3;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message TokensResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message RevokeTokenRequest {
  string refreshToken = 1;
}

message RevokeTokenResponse {
  bool success = 1;
}

message User {
  string id = 1;

  reserved 2, 3, 4, 5, 6;

  optional Phone phone = 7;

  optional Nostr nostr = 8;

  optional Profile profile = 9;

  repeated Role roles = 10;
}

message Phone {
  string number = 1;
  bool verified = 2;
}

// Users nostr identifier
message Nostr {
  string npub = 1;
  bool verified = 2;
}

message Profile {
  // Users name or nym
  optional string name = 1;
  // Users avatar url
  optional string avatar_url = 2;
}

enum Role {
  Member = 0;
  Admin = 1;
  SuperAdmin = 3;
}

message UpdateUserRequest {
  string user_id = 1;
  UserUpdates updates = 2;
}

message UserUpdates {
  optional Phone phone = 1;

  optional Nostr nostr = 2;

  optional Profile profile = 3;

  repeated Role roles = 4;
}
